examples/invalid/55_double_remainder_unavailable.lane
module Examples.Invalid.DoubleRemainderUnavailable

import Basic.Trait.Ops.*

pub let bad : Double = 1.0 % 2.0
